# Portfolio-ML-System

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: gradio_app.py
configs/: credit_risk.yaml  demand_forecasting.yaml  fraud_detection.yaml  price_prediction.yaml
results/: comparison_summary.csv  credit_risk_metrics.csv  demand_forecasting_metrics.csv  fraud_detection_metrics.csv  price_prediction_metrics.csv
scripts/: evaluate.py  generate_data.py  run_all.py  serve.py  train.py
src/: config.py  device.py
src/data/: generate_credit_risk.py  generate_fraud.py  generate_housing.py  generate_timeseries.py  preprocess.py
src/evaluation/: classification_metrics.py  evaluator.py  regression_metrics.py  timeseries_metrics.py
src/features/: credit_risk_features.py  fraud_features.py  housing_features.py  timeseries_features.py
src/models/: credit_risk_model.py  fraud_autoencoder.py  lstm_forecaster.py  price_model.py
src/serving/: api.py  predictor.py
src/training/: train_credit_risk.py  train_forecaster.py  train_fraud.py  train_price.py  trainer.py
tests/: conftest.py  test_data_generation.py  test_features.py  test_models.py  test_serving.py
